--- a/Pipfile
+++ b/Pipfile
@@ -38,6 +38,9 @@ pytest-django = "==3.1.2"
 pytest-sugar = "==0.9.0"
 djangorestframework = "*"
 django-taggit = "*"
+djangorestframework-jwt = "*"
+django-taggit-serializer = "*"
+django-rest-auth = "*"
 
 
 [dev-packages]
