--- a/Pipfile
+++ b/Pipfile
@@ -41,6 +41,7 @@ django-taggit = "*"
 djangorestframework-jwt = "*"
 django-taggit-serializer = "*"
 django-rest-auth = "*"
+django-cors-headers = "*"
 
 
 [dev-packages]
