--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "redux": "^3.7.2",
     "redux-i18n": "^1.5.12",
     "redux-thunk": "^2.2.0",
+    "reset-css": "^3.0.0",
     "sass-loader": "^6.0.7",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
