--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "jest": "20.0.4",
     "node-sass": "^4.7.2",
     "object-assign": "4.1.1",
+    "path-helper": "^0.0.12",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
