--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,9 +40,11 @@
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-facebook-login": "^4.0.1",
+    "react-ionicons": "^2.1.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-styled-components": "^0.1.11",
     "react-textarea-autosize": "^6.1.0",
     "reactotron-react-js": "^1.13.0",
     "redux": "^3.7.2",
