--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,9 +44,10 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-slick": "^0.23.1",
     "react-styled-components": "^0.1.11",
     "react-textarea-autosize": "^6.1.0",
-    "reactotron-react-js": "^1.13.0",
+    "reactotron-react-js": "^2.1.1",
     "redux": "^3.7.2",
     "redux-i18n": "^1.5.12",
     "redux-thunk": "^2.2.0",
